fix error commit

--- a/Client/eart/src/app/signin/signin.component.html
+++ b/Client/eart/src/app/signin/signin.component.html
@@ -31,12 +31,11 @@
             </div>
         </form>
 
-        <div class="alert alert-success" *ngIf="isLoggedIn">
-            <div class="form-group">
-                <button class="btn btn-primary btn-block">
-            <a routerLink="/home">Next</a>
+        <div class="form-group">
+            <button class="btn btn-primary btn-block">
+            <a routerLink="/home">Home</a>
           </button>
-            </div>
+
         </div>
     </div>
 </div>
